feat(server): add insert API endoint
